// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondaryScreen.native renders a snapshot 1`] = `
<BaseComponent
  actionButtons={Array []}
  refreshing={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  title="Title"
>
  <Styled(Text)
    alignSelf="auto"
    color="#191919"
    margin={0}
    size={16}
  >
    SecondaryScreen
  </Styled(Text)>
</BaseComponent>
`;

exports[`SecondaryScreen.native renders a snapshot with \`actionButtons\` 1`] = `
<BaseComponent
  actionButtons={
    Array [
      <Styled(Text)
        alignSelf="auto"
        color="#191919"
        margin={0}
        size={16}
      >
        1
      </Styled(Text)>,
      <Styled(Text)
        alignSelf="auto"
        color="#191919"
        margin={0}
        size={16}
      >
        2
      </Styled(Text)>,
    ]
  }
  refreshing={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  title="Title"
>
  <Styled(Text)
    alignSelf="auto"
    color="#191919"
    margin={0}
    size={16}
  >
    SecondaryScreen
  </Styled(Text)>
</BaseComponent>
`;

exports[`SecondaryScreen.native renders a snapshot with \`bodyStyle\` 1`] = `
<BaseComponent
  actionButtons={Array []}
  bodyStyle={
    Object {
      "backgroundColor": "black",
    }
  }
  refreshing={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  title="Title"
>
  <Styled(Text)
    alignSelf="auto"
    color="#191919"
    margin={0}
    size={16}
  >
    SecondaryScreen
  </Styled(Text)>
</BaseComponent>
`;

exports[`SecondaryScreen.native renders a snapshot with \`headerStyle\` 1`] = `
<BaseComponent
  actionButtons={Array []}
  headerStyle={
    Object {
      "backgroundColor": "black",
    }
  }
  refreshing={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  title="Title"
>
  <Styled(Text)
    alignSelf="auto"
    color="#191919"
    margin={0}
    size={16}
  >
    SecondaryScreen
  </Styled(Text)>
</BaseComponent>
`;

exports[`SecondaryScreen.native renders a snapshot with \`onBackPress\` 1`] = `
<BaseComponent
  actionButtons={Array []}
  onBackPress={[Function]}
  refreshing={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  title="Title"
>
  <Styled(Text)
    alignSelf="auto"
    color="#191919"
    margin={0}
    size={16}
  >
    SecondaryScreen
  </Styled(Text)>
</BaseComponent>
`;

exports[`SecondaryScreen.native renders a snapshot with \`onRefresh\` 1`] = `
<BaseComponent
  actionButtons={Array []}
  onRefresh={[Function]}
  refreshing={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  title="Title"
>
  <Styled(Text)
    alignSelf="auto"
    color="#191919"
    margin={0}
    size={16}
  >
    SecondaryScreen
  </Styled(Text)>
</BaseComponent>
`;

exports[`SecondaryScreen.native renders a snapshot with \`refreshing\` 1`] = `
<BaseComponent
  actionButtons={Array []}
  refreshing={true}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  title="Title"
>
  <Styled(Text)
    alignSelf="auto"
    color="#191919"
    margin={0}
    size={16}
  >
    SecondaryScreen
  </Styled(Text)>
</BaseComponent>
`;

exports[`SecondaryScreen.native renders a snapshot with \`style\` 1`] = `
<BaseComponent
  actionButtons={Array []}
  refreshing={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      Object {
        "backgroundColor": "black",
      },
    ]
  }
  title="Title"
>
  <Styled(Text)
    alignSelf="auto"
    color="#191919"
    margin={0}
    size={16}
  >
    SecondaryScreen
  </Styled(Text)>
</BaseComponent>
`;

exports[`SecondaryScreen.native renders a snapshot with \`title:MyTitle\` 1`] = `
<BaseComponent
  actionButtons={Array []}
  refreshing={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  title="MyTitle"
>
  <Styled(Text)
    alignSelf="auto"
    color="#191919"
    margin={0}
    size={16}
  >
    SecondaryScreen
  </Styled(Text)>
</BaseComponent>
`;

exports[`SecondaryScreen.native renders a snapshot with \`whiteBackIcon\` 1`] = `
<BaseComponent
  actionButtons={Array []}
  refreshing={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  title="Title"
  whiteBackIcon={true}
>
  <Styled(Text)
    alignSelf="auto"
    color="#191919"
    margin={0}
    size={16}
  >
    SecondaryScreen
  </Styled(Text)>
</BaseComponent>
`;
